# asymmetrica-email-tool

./: .gitignore  NKI_Puzzles_Release_Full6.ipynb  agents.py  email_search.py  email_tool.py  main.py  pyproject.toml  requirements.txt  run_crew.py  search_engine.py  tasks.py  test_duolingo_crm.py  utils.py
config/: agents.yaml  tasks.yaml
db/: chroma.sqlite3
